backport 4297
Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>